--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
     </ul>
      </div>
      </nav>
+     
+     <footer>
+         <p>Developed at The University of Kansas</p>
+     </footer>
      <div class="center">
          <h1 style="text-align:center;color:white"><font face="sans-serif"><i> Welcome </i></h1>
          <h2 style="text-align:center;color:white"><font face="sans-serif"> to </h2>
