--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
         padding: 110px 0;
         text-align: center;
     }
+    .footer
+    {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: black;
+        color: white;
+    }
 </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,9 +52,10 @@
      </div>
      </nav>
      
-     <footer>
+     <div class="footer">
          <p>Developed at The University of Kansas</p>
-     </footer>
+     </div>
+        
      <div class="center">
          <h1 style="text-align:center;color:white"><font face="sans-serif"><i> Welcome </i></h1>
          <h2 style="text-align:center;color:white"><font face="sans-serif"> to </h2>
