--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
      </div>
              
      <div class="footer">
-         <p>Developed at The University of Kansas</p>
+         <p>Developed at The University of Kansas | <a href="about.html">About</a></p>
      </div>
         
 </body> 
