--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
              
      <div class="footer">
          <p>Developed at The University of Kansas | </p>
-         <p style="text-align:right;color:white"><a href="about.html">About</a>
+         <p style="text-align:right"><a href="about.html" style="color:white">About</a>
      </div>
         
 </body> 
