--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
      </div>
              
      <div class="footer">
-         <p>Developed at <a href="http://physics.ku.edu/" style="color:white"> The Physics & Astronomy Department of The University of Kansas</a> | 
+         <p>Developed at <a href="http://physics.ku.edu/" style="color:white"> The of The University of Kansas - Physics & Astronomy Department</a> | 
          <a href="about.html" style="color:white">About</a> | <a href="creators.html" style="color:white">The Creators</a></p>
      </div>
              
