--- a/rules.html
+++ b/rules.html
@@ -4,7 +4,7 @@
 <style>
     .footer
     {
-        position: absolute;
+        position: fixed;
         left: 0;
         bottom: 0;
         height: 40px;
