--- a/login.html
+++ b/login.html
@@ -75,11 +75,11 @@
 <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="rules.html">Rules</a></li>
-        <li><a href="teamrosters.html">Team Rosters</a></li>
-        <li><a href="scoringrubric.html">Scoring Rubric</a></li>
+        <li><a href="rules.html">The Game</a></li>
+        <li><a href="teamrosters.html">The Crew</a></li>
+        <li><a href="scoringrubric.html">The Hunt</a></li>
         <li><a href="joinatournament.html">Join a Tournament</a></li>
+        <li><a href="instructors.html">The Instructors</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
