--- a/rules.html
+++ b/rules.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <style>
-    footer.navbar-default.navbar-fixed-bottom
+    .footer
     {
+        position: -webkit-sticky;
+        position: sticky;
+        left: 0;
+        bottom: 0;
         height: 40px;
         width: 100%;
         color: white;
-    }
-    footer.navbar-default.navbar-fixed-bottom p
-    {
-        margin: 0;
     }
     .background-img
     {
