--- a/rules.html
+++ b/rules.html
@@ -4,8 +4,7 @@
 <style>
     .footer
     {
-        position: -webkit-sticky;
-        position: sticky;
+        position: fixed-bottom;
         left: 0;
         bottom: 0;
         height: 40px;
