--- a/teamrosters.html
+++ b/teamrosters.html
@@ -76,33 +76,33 @@
         <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
             <tr>
                 <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072245/" style="color:white">Associated Higgs Boson Top-Quark Production ttH→2ℓ+1τhadat s√=13~TeV with ATLAS</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2213094/" style="color:white">Single top quark production measurements in CMS (15' + 5')</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2213094/" style="color:white">Single top quark production measurements in CMS</u></i></td>
                 <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071807/" style="color:white">Search for Vector-Like Top Quarks in the CMS detector</u></i></td>
                 <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071340/" style="color:white">Inclusive top-quark pair production cross section in pp collisions at \sqrt{s} = 13 TeV in CMS in the dileptonic final state</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072555/" style="color:white">Production of heavy Higgs bosons and decay into top quarks at the LHC (15' + 5')</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072555/" style="color:white">Production of heavy Higgs bosons and decay into top quarks at the LHC</u></i></td>
             </tr>
             <tr>
                 <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071326/" style="color:white">Search for Standard Model Production of Four Top Quarks</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072557/" style="color:white">Measurement of top quark properties in single top production (15' + 5')</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072557/" style="color:white">Measurement of top quark properties in single top production</u></i></td>
                 <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072277/" style="color:white">Search for scalar top quark production in all hadronic channel</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072338/"style="color:white">Top quark mass calibration for Monte-Carlo event generators (15' + 5')</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072338/"style="color:white">Top quark mass calibration for Monte-Carlo event generators</u></i></td>
                 <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071321/"style="color:white">First attempt to search for H+ to cbbar in top quark decays at CMS</u></i></td>
             </tr>
         </table>
         <h4 style="margin-left:5px;color:white">Bottom Quark Experiments</h4>
         <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
             <tr>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071500/"style="color:white">Novel real-time calibration and alignment at LHCb for RunII (20' + 5')</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072026/"style="color:white">b-hadron production at LHCb (15' + 5')</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072525/"style="color:white">Rare leptonic and semileptonic b-hadron decays and Tests of Lepton Flavour Universality at LHCb (10' + 5')</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072055/"style="color:white">Electroweak scale exotica with LHCb (15' + 5')</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071500/"style="color:white">Novel real-time calibration and alignment at LHCb for RunII</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072026/"style="color:white">b-hadron production at LHCb</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072525/"style="color:white">Rare leptonic and semileptonic b-hadron decays and Tests of Lepton Flavour Universality at LHCb</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072055/"style="color:white">Electroweak scale exotica with LHCb</u></i></td>
                 <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071318/"style="color:white">Search for a Standard Model Higgs boson produced in association w a W or Z boson decaying to bottom quarks</u></i></td>
             </tr>
         </table>
         <h4 style="margin-left:5px;color:white">NOvA Experiments</h4>
         <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
             <tr>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2144798/"style="color:white">Recent Results of Electron-Neutrino Appearance Measurement at NOvA (13' + 2')</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2144798/"style="color:white">Recent Results of Electron-Neutrino Appearance Measurement at NOvA</u></i></td>
                 <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2194565/"style="color:white">Neutrino Induced Neutral Current Coherent π^0 Production in The NOvA Near Detector</u></i></td>
                 <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072009/"style="color:white">Looking amongst the neutrinos for lightweight dark matter in the NOva Near Dectector</u></i></td>
                 <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071342/"style="color:white">Measurement of c-jet tagging efficiency in ATLAS with W+c-jet events</u></i></td>
@@ -122,13 +122,13 @@
         <h4 style="margin-left:5px;color:white">LHC Experiments</h4>
         <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
             <tr>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2223633/" style="color:white">Searches for SUSY (25' + 5')</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2207033/" style="color:white">Search for electroweak production of SUSY at CMS (15' + 5')</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2223633/" style="color:white">Searches for SUSY</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2207033/" style="color:white">Search for electroweak production of SUSY at CMS</u></i></td>
                 <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072215/" style="color:white">SUSY searches with two opposite-sign same-flavor leptons at CMS</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071810/" style="color:white">Searches for R-Parity violating SUSY with the ATLAS detector (15' + 5')</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2219937/" style="color:white">Searches for long lived SUSY particles (10' + 2')</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071833/" style="color:white">Prospects for SUSY DM after the LHC Run 1 (15' + 5')</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071809/" style="color:white">Searches for SUSY in photons and tau channels with the ATLAS detector (15' + 5')</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071810/" style="color:white">Searches for R-Parity violating SUSY with the ATLAS detector</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2219937/" style="color:white">Searches for long lived SUSY particles</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071833/" style="color:white">Prospects for SUSY DM after the LHC Run 1</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071809/" style="color:white">Searches for SUSY in photons and tau channels with the ATLAS detector</u></i></td>
             </tr>
         </table>
         <br>
@@ -136,20 +136,20 @@
         <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Exotic States</b></i></h2>
         <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
             <tr>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071682/" style="color:white">Production of exotic hadrons and charmonium at Belle/Babar (12' + 3')</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071682/" style="color:white">Production of exotic hadrons and charmonium at Belle/Babar</u></i></td>
                 <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072056/" style="color:white">LHCb Exotica and Higgs searches</u></i></td>
             </tr>
             <tr>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071638/" style="color:white">Physics potential and prospects at SuperKEKB/Belle II (10' + 5')</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072154/" style="color:white">Exotic hadrons at the LHC (25' + 5')</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071638/" style="color:white">Physics potential and prospects at SuperKEKB/Belle II</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072154/" style="color:white">Exotic hadrons at the LHC</u></i></td>
             </tr>
             <tr>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072024/" style="color:white">Exotic hadrons at the Tevatron (15' + 5')</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2223634/" style="color:white">Exotica searches (25' + 5')</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072024/" style="color:white">Exotic hadrons at the Tevatron</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2223634/" style="color:white">Exotica searches</u></i></td>
             </tr>
             <tr>
                 <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072049/" style="color:white">Exploring the Masses of Exotic Heavy Pentaquarks</u></i></td>
-                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071584/" style="color:white">Search for exotic decays of the 125 GeV Higgs boson using the CMS detector (15' + 5')</u></i></td>
+                <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071584/" style="color:white">Search for exotic decays of the 125 GeV Higgs boson using the CMS detector</u></i></td>
             </tr>
         </table>
     
