--- a/rules.html
+++ b/rules.html
@@ -187,7 +187,7 @@
          <li style="margin-left:50px;color:white;font-size:25px">A tie within an Event is settled by evenly distributing 100GP to each winner</li>
      </ul>
      
-   <footer class="navbar-default navbar-fixed-bottom">
+   <footer class="footer">
        <div class="container">
          <p>Developed at <a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</a> | 
          <a href="about.html" style="color:white">About</a> | <a href="creators.html" style="color:white">The Creators</a></p>
