--- a/rules.html
+++ b/rules.html
@@ -38,8 +38,8 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="rules.html">The Game</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="rules.html">The Game</a></li>
             <li><a href="teamrosters.html">The Crew</a></li>
             <li><a href="scoringrubric.html">The Hunt</a></li>
             <li><a href="joinatournament.html">Join a Tournament</a></li>
