--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -24,7 +24,7 @@
          <li><a href="index.html">Home</a></li>
          <li><a href="rules.html">The Game</a></li>
          <li><a href="teamrosters.html">The Crew</a></li>
-         <li><a href="scoringrubric.html">The Hunt</a></li>
+         <li class="active"><a href="scoringrubric.html">The Hunt</a></li>
 	     <li><a href="joinatournament.html">Join a Tournament</a></li>
          <li><a href="instructors.html">The Instructors</a></li>
      </ul>
