--- a/signup.html
+++ b/signup.html
@@ -74,7 +74,7 @@
 
 <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="rules.html">The Game</a></li>
         <li><a href="teamrosters.html">The Crew</a></li>
         <li><a href="scoringrubric.html">The Hunt</a></li>
