--- a/teamrosters.html
+++ b/teamrosters.html
@@ -21,8 +21,8 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li class="active"><a href="rules.html">The Game</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="rules.html">The Game</a></li>
         <li class="active"><a href="teamrosters.html">The Crew</a></li>
         <li><a href="scoringrubric.html">The Hunt</a></li>
         <li><a href="joinatournament.html">Join a Tournament</a></li>
@@ -30,7 +30,7 @@
     </ul>
     
     <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
         <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
     </div> 
