--- a/login.html
+++ b/login.html
@@ -74,7 +74,7 @@
 
 <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="rules.html">The Game</a></li>
         <li><a href="teamrosters.html">The Crew</a></li>
         <li><a href="scoringrubric.html">The Hunt</a></li>
@@ -82,8 +82,8 @@
         <li><a href="instructors.html">The Instructors</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li class="active"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
 </div>
 </nav> 
