--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <li><a href="instructors.html">The Instructors</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="signup.html"><span class="glyphicon glyphicon-user"></span>  Sign Up</a></li>
+        <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span>  Sign Up</a></li>
         <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
      </div>
