--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 </head>
 <body style="background-image:url(https://images.unsplash.com/photo-1464802686167-b939a6910659?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d8c03c98f431a4dbbfb5f93962fa44e7&w=1000&q=80)">
 
-    <nav class="navbar navbar-inverse">
     <div class="container-fluid">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -44,7 +43,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
+        <li class="active"><a href="index.html" style="color:white">Home</a></li>
         <li><a href="rules.html">The Game</a></li>
         <li><a href="teamrosters.html">The Crew</a></li>
         <li><a href="scoringrubric.html">The Hunt</a></li>
