--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <link rel="icon" type="image/png" href="logo3.png">
 </head>
 <body>
+             <div class="bg"></div>
+    <nav class="navbar navbar-inverse">
     <div class="container-fluid">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -83,7 +85,6 @@
      
      <div class="background-img">
      <img src="kansas-jayhawks-profile.jpg" width="50" height="50"></div>
-            <div class="bg"></div>
         
 </body> 
 </html> 
