--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
     <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
         <li class="active"><a href="index.html" style="color:white">Home</a></li>
-        <li><a href="rules.html">The Game</a></li>
-        <li><a href="teamrosters.html">The Crew</a></li>
-        <li><a href="scoringrubric.html">The Hunt</a></li>
-        <li><a href="joinatournament.html">Join a Tournament</a></li>
-        <li><a href="instructors.html">The Instructors</a></li>
+        <li><a href="rules.html" style="color:white">The Game</a></li>
+        <li><a href="teamrosters.html" style="color:white">The Crew</a></li>
+        <li><a href="scoringrubric.html" style="color:white">The Hunt</a></li>
+        <li><a href="joinatournament.html" style="color:white">Join a Tournament</a></li>
+        <li><a href="instructors.html" style="color:white">The Instructors</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-        <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span>  Sign Up</a></li>
-        <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="signup.html" style="color:white"><span class="glyphicon glyphicon-user"></span>  Sign Up</a></li>
+        <li><a href="login.html" style="color:white"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
      </div>
      </nav>
