--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body>
     <div class="bg">
-    
+    <nav class="navbar navbar-inverse">
     <div class="container-fluid">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -52,16 +52,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>   
         </button>
-        <a class="navbar-brand" href="index.html" style="color:white"><i>Fantasy Physics</i></a>
+        <a class="navbar-brand" href="index.html"><i>Fantasy Physics</i></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html" style="color:white">Home</a></li>
-        <li><a href="rules.html" style="color:white">The Game</a></li>
-        <li><a href="teamrosters.html" style="color:white">The Crew</a></li>
-        <li><a href="scoringrubric.html" style="color:white">The Hunt</a></li>
-        <li><a href="joinatournament.html" style="color:white">Join a Tournament</a></li>
-        <li><a href="instructors.html" style="color:white">The Instructors</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="rules.html">The Game</a></li>
+        <li><a href="teamrosters.html">The Crew</a></li>
+        <li><a href="scoringrubric.html">The Hunt</a></li>
+        <li><a href="joinatournament.html">Join a Tournament</a></li>
+        <li><a href="instructors.html">The Instructors</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
         <li><a href="signup.html" style="color:white"><span class="glyphicon glyphicon-user"></span>  Sign Up</a></li>
