--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -654,6 +654,8 @@
               <td></td>
           </tr>
 </table>
-
+<footer>
+	<p><i>Developed by The University of Kansas - Physics & Astronomy Department</i></p>
+</footer>
 </body>
 </html>
