--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -655,7 +655,9 @@
           </tr>
 </table>
 <footer>
-	<p><i>Developed by The University of Kansas - Physics & Astronomy Department</i></p>
+	<p>Developed at <a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</a> | 
+        <a href="about.html" style="color:white">About</a> | <a href="creators.html" style="color:white">The Creators</a></p>
+	<img src="kansas-jayhawks-profile.jpg">
 </footer>
 </body>
 </html>
