--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -657,7 +657,7 @@
 <footer>
 	<p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</a> | 
         <a href="about.html" style="color:white">About</a> | <a href="creators.html" style="color:white">The Creators</a></p>
-	<img src="kansas-jayhawks-profile.jpg" width="50" height="50">
+	<img style="float: right;" src="kansas-jayhawks-profile.jpg" width="50" height="50">
 </footer>
 </body>
 </html>
