--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html> 
 <html>
 <head>
-<style>
-    .footer
-    {
-	 height: 40px;
-	 color: white;
-    }
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</style>
 </head>
 <body style="background-image:url(https://images.unsplash.com/photo-1464802686167-b939a6910659?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d8c03c98f431a4dbbfb5f93962fa44e7&w=1000&q=80)">
 
@@ -661,7 +654,7 @@
               <td></td>
           </tr>
 </table>
-<footer class="footer">
+<footer>
 	<p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</a> | 
         <a href="about.html" style="color:white">About</a> | <a href="creators.html" style="color:white">The Creators</a></p>
 	<img style="float: right;" src="kansas-jayhawks-profile.jpg" width="50" height="50">
