--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html> 
 <html>
 <head>
+<style>
+    .fter
+    {
+        height: 40px;
+        color: white;
+    }
+    .background-img
+    {
+        right: 10px;
+        bottom: 10px;
+    }
+</style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -654,10 +666,12 @@
               <td></td>
           </tr>
 </table>
-<footer height="40">
+<footer class="fter">
 	<p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</a> | 
         <a href="about.html" style="color:white">About</a> | <a href="creators.html" style="color:white">The Creators</a></p>
+	<div class="background-img">
 	<img style="float: right;" src="kansas-jayhawks-profile.jpg" width="50" height="50">
+	</div>
 </footer>
 </body>
 </html>
