--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -666,12 +666,10 @@
               <td></td>
           </tr>
 </table>
-<footer class="fter">
+<footer>
 	<p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</a> | 
         <a href="about.html" style="color:white">About</a> | <a href="creators.html" style="color:white">The Creators</a></p>
-	<div class="background-img">
-	<img style="float: right;" src="kansas-jayhawks-profile.jpg" width="50" height="50">
-	</div>
+	<img style="float: right;" src="kansas-jayhawks-profile.jpg" width="42" height="42">
 </footer>
 </body>
 </html>
