--- a/teamrosters.html
+++ b/teamrosters.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html> 
 <html>
 <head>
+<style>
+    .footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #efefef;
+  text-align: center;
+}
+    </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -150,6 +161,9 @@
         
         <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Instrumentation</b></i></h2>
         <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Astroparticle</b></i></h2>
+        <div class="footer">
+            <img src="kansas-jayhawks-profile.jpg">
+        </div>
     
 </body>
 </html>
