--- a/rules.html
+++ b/rules.html
@@ -1,19 +1,9 @@
 <!DOCTYPE html> 
 <html>
 <head>
-<style>
-    .footer
-    {
-        position: fixed;
-        left: 0;
-        bottom: 0;
-        height: 40px;
-        width: 100%;
-        color: white;
-    }
+<style> 
     .background-img
     {
-        position: fixed;
         right: 10px;
         bottom: 10px;
     }
@@ -187,14 +177,13 @@
          <li style="margin-left:50px;color:white;font-size:25px">A tie within an Event is settled by evenly distributing 100GP to each winner</li>
      </ul>
      
-   <footer class="footer">
+   <footer>
        <div class="container">
          <p>Developed at <a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</a> | 
          <a href="about.html" style="color:white">About</a> | <a href="creators.html" style="color:white">The Creators</a></p>
-     </div>
         </footer>
      <div class="background-img">
      <img src="kansas-jayhawks-profile.jpg" width="50" height="50"></div>
-             
+         </div>
     </body>
     </html>
