--- a/rules.html
+++ b/rules.html
@@ -178,10 +178,10 @@
      </ul>
      
    <footer>
-         <p style="color:white;text-align:right">Developed at <a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</a> | 
+         <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</a> | 
          <a href="about.html" style="color:white">About</a> | <a href="creators.html" style="color:white">The Creators</a></p>
         </footer>
        <div class="background-img">
-     <img src="kansas-jayhawks-profile.jpg" width="50" height="50"></div>
+     <img style="float: right" src="kansas-jayhawks-profile.jpg" width="50" height="50"></div>
     </body>
     </html>
