--- a/rules.html
+++ b/rules.html
@@ -19,6 +19,18 @@
         background-repeat: no-repeat;
         background-size: cover;
     }
+    .footer img
+    {
+        float: right;
+        width: 100px;
+        height: 100px;
+    }
+    .footer p
+    {
+        position: relative;
+        top: 18px;
+        left: 10px;
+    }
 </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -189,12 +201,11 @@
          <li style="margin-left:50px;color:white;font-size:25px">A tie within an Event is settled by evenly distributing 100GP to each winner</li>
      </ul>
      
-   <footer>
+   <div class="footer">
          <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</a> | 
          <a href="about.html" style="color:white">About</a> | <a href="creators.html" style="color:white">The Creators</a></p>
-        </footer>
-       <div class="background-img">
-     <img style="float: right" src="kansas-jayhawks-profile.jpg" width="50" height="50"></div>
+     <img src="kansas-jayhawks-profile.jpg"></div>
+        </div>
         </div>
     </body>
     </html>
