--- a/rules.html
+++ b/rules.html
@@ -24,12 +24,16 @@
         float: right;
         width: 50px;
         height: 50px;
+        right: 10px;
+        bottom: 10px;
     }
     .footer p
     {
         position: relative;
         top: 18px;
         left: 10px;
+        margin: 0;
+        padding: 0;
     }
 </style>
     <meta charset="utf-8">
