--- a/rules.html
+++ b/rules.html
@@ -42,7 +42,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body style="background-color:LightGray">
+<body style="background-color:LightBlue">
     <div class="bg">
     <nav class="navbar navbar-inverse">
     <div class="container-fluid">
