--- a/rules.html
+++ b/rules.html
@@ -30,7 +30,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body style="background-image:url(https://www.google.com/url?sa=i&source=imgres&cd=&cad=rja&uact=8&ved=2ahUKEwjVoOCvq73cAhUHP6wKHRWWDpkQjRx6BAgBEAU&url=https%3A%2F%2Fpngtree.com%2Ffreebackground%2Fbusiness-technology-background-material_415933.html&psig=AOvVaw2HCRA-LsJASvZbdqC8heT2&ust=1532714172142114)">
+<body style="background-image:url(https://png.pngtree.com/thumb_back/fh260/back_pic/00/05/97/02562865440a076.jpg)">
     <div class="bg">
     <nav class="navbar navbar-inverse">
     <div class="container-fluid">
