--- a/rules.html
+++ b/rules.html
@@ -23,6 +23,18 @@
         margin: 0;
         padding: 0;
     }
+    body, html
+    {
+        height: 100%;
+    }
+    .bg
+    {
+        background-image: url("https://png.pngtree.com/thumb_back/fh260/back_pic/00/05/97/02562865440a076.jpg");
+        height: 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
 </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +42,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body style="background-image:url(https://png.pngtree.com/thumb_back/fh260/back_pic/00/05/97/02562865440a076.jpg)">
+<body>
     <div class="bg">
     <nav class="navbar navbar-inverse">
     <div class="container-fluid">
@@ -59,8 +71,8 @@
       </div>   
       </nav>
 <div class="content">
-    <h1 style="margin-left:5px;color:white">Rules & Definitions<br><br></h1>
-   	<h3 style="margin-left:25px;color:white;font-size:30px;color:white">Definitions</h3>
+    <h1 style="margin-left:5px">Rules & Definitions<br><br></h1>
+   	<h3 style="margin-left:25px;font-size:30px;color:white">Definitions</h3>
     <ul>
         <li style="margin-left:50px;color:white;font-size:22px"><b><i>The Executive - </b></i>Contenders of the game</li>
         <li style="margin-left:50px;color:white;font-size:22px"><b><i>EP - </b></i>Event Points</li>
