--- a/rules.html
+++ b/rules.html
@@ -26,6 +26,8 @@
     body, html
     {
         height: 100%;
+        padding: 0;
+        margin: 0;
     }
     .parallax
     {
@@ -87,6 +89,7 @@
         <li style="margin-left:50px;color:white;font-size:22px"><b><i>Teams - </b></i>Experiments that are selected by Users</li>
         <li style="margin-left:50px;color:white;font-size:22px"><b><i>Index - </b></i>List of Teams that a User chooses for an Event</li>
      </ul>
+        <div class="parallax"></div>
      <h3 style="margin-left:25px;font-size:30px">Game Tree</h3>
      <ul>
          <li style="margin-left:50px;font-size:22px">Game ---> Tournament ---> Event</li>
@@ -100,6 +103,7 @@
          <li style="margin-left:50px;color:white;font-size:22px">The Winners of the Events within a Tournament compare their total GP earned </li>
          <li style="margin-left:75px;color:white;font-size:18px">Whoever holds the most GP is the Tournament Champion</li>
 <br></ul>
+        <div class="parallax"></div>
      <h1 style="margin-left:5px;color:white">Tournament Rules<br></h1>
      <h3 style="margin-left:25px;font-size:30px;color:white">What is a Tournament?</h3>
      <ul>
