--- a/rules.html
+++ b/rules.html
@@ -75,6 +75,7 @@
       </nav>
         
  <div class="parallax"></div>
+ <div style="background-color:DarkGray">
     <h1 style="margin-left:5px;color:white">Rules & Definitions<br><br></h1>
    	<h3 style="margin-left:25px;font-size:30px;color:white">Definitions</h3>
     <ul>
@@ -88,7 +89,7 @@
         <li style="margin-left:50px;color:white;font-size:22px"><b><i>Preliminary Winner(s) - </b></i>Users who win Events within a Tournament</li>
         <li style="margin-left:50px;color:white;font-size:22px"><b><i>Teams - </b></i>Experiments that are selected by Users</li>
         <li style="margin-left:50px;color:white;font-size:22px"><b><i>Index - </b></i>List of Teams that a User chooses for an Event</li>
-     </ul>
+     </ul></div>
         <div class="parallax"></div>
      <h3 style="margin-left:25px;font-size:30px">Game Tree</h3>
      <ul>
