--- a/signup.html
+++ b/signup.html
@@ -71,7 +71,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-
+<div class="bg">
 <nav class="navbar navbar-inverse">
 <div class="container-fluid">
 <div class="navbar-header">
@@ -124,5 +124,6 @@
      
      <div class="background-img">
      <img src="kansas-jayhawks-profile.jpg" width="50" height="50"></div>
+     </div>                                                
 </body>
 </html>
