--- a/signup.html
+++ b/signup.html
@@ -118,8 +118,8 @@
          <button onclick="logout()">Logout</button>
     </div>
  <div class="footer">
-         <p>Developed at <a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</a> | 
-         <a href="about.html" style="color:white">About</a> | <a href="creators.html" style="color:white">The Creators</a></p>
+         <i><p>Developed at <u><a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</u></a> | 
+         <u><a href="about.html" style="color:white">About</u></a> | <u><a href="creators.html" style="color:white">The Creators</i></u></a></p>
      </div>
      
      <div class="background-img">
