--- a/teamrosters.html
+++ b/teamrosters.html
@@ -177,9 +177,8 @@
         
          <div class="parallax"></div>
         <div class="footer">
-            <img src="kansas-jayhawks-profile.jpg">
+            <img src="kansas-jayhawks-profile.jpg" height="50" width="50">
         </div>
-         <div class="parallax"></div>
     
 </body>
 </html>
