--- a/teamrosters.html
+++ b/teamrosters.html
@@ -176,9 +176,9 @@
         <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Astroparticle</b></i></h2>
         
          <div class="parallax"></div>
-        <div class="footer">
+        <footer>
             <img src="kansas-jayhawks-profile.jpg" height="50" width="50">
-        </div>
+        </footer>
     
 </body>
 </html>
