--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -2,15 +2,21 @@
 <html>
 <head>
 <style>
-    .fter
+    .footer img
     {
-        height: 40px;
-        color: white;
-    }
-    .background-img
-    {
+        float: right;
+        width: 50px;
+        height: 50px;
         right: 10px;
         bottom: 10px;
+    }
+    .footer p
+    {
+        position: relative;
+        top: 18px;
+        left: 10px;
+        margin: 0;
+        padding: 0;
     }
 </style>
     <meta charset="utf-8">
@@ -666,10 +672,9 @@
               <td></td>
           </tr>
 </table>
-<footer>
-	<p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</a> | 
-        <a href="about.html" style="color:white">About</a> | <a href="creators.html" style="color:white">The Creators</a></p>
-	<img style="float: right;" src="kansas-jayhawks-profile.jpg" width="42" height="42">
-</footer>
+ <div class="footer">
+         <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</a> | 
+         <a href="about.html" style="color:white">About</a> | <a href="creators.html" style="color:white">The Creators</a></p>
+     <img src="kansas-jayhawks-profile.jpg"></div>
 </body>
 </html>
