--- a/teamrosters.html
+++ b/teamrosters.html
@@ -166,7 +166,7 @@
         <br>
         
 
-        <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Instrumentation</b></i></h2>
+        <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Instrumentation</b></i></h2><br>
 
         <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Astroparticle</b></i></h2>
         
